--- a/requirements.txt
+++ b/requirements.txt
@@ -1,280 +1,5 @@
-absl-py==0.1.11
-adodbapi==2.6.0.7
-aiohttp==3.7.4.post0
-alabaster==0.7.10
-algopy==0.5.7
-altair==2.0.0.dev0
-altair-widgets==0.1.2
-asciitree==0.3.3
-asteval==0.9.12
-astor==0.6.2
-astroid==1.6.2
-astroML==0.3
-async-timeout==3.0.1
-attrs==17.4.0
-Babel==2.5.3
-backports-abc==0.5
-baresql==0.7.4
-bcolz==1.2.0
-beautifulsoup4==4.6.0
-blaze==0.10.1
-bleach==2.1.3
-blosc==1.5.1
-bloscpack==0.11.0
-bokeh==0.12.15
-Bottleneck==1.2.1
-bqplot==0.10.5
-brewer2mpl==1.4.1
-Brotli==1.0.2
-certifi==2018.1.18
-cffi==1.11.5
-chardet==3.0.4
-click==6.7
-cloudpickle==0.5.2
-colorama==0.3.9
-comtypes==1.1.4
-cx-Freeze==5.1.1
-cycler==0.10.0
-Cython==0.28.1
-cytoolz==0.9.0.1
-dask==0.17.2
-dask-searchcv==0.2.0
-datashape==0.5.2
-db.py==0.5.3
-decorator==4.2.1
-discord==1.7.3
-discord.py==1.7.3
-distributed==1.21.4
-docopt==0.6.2
-docrepr==0.1.1
-docutils==0.14
-edward==1.3.5
-emcee==2.2.1
-entrypoints==0.2.3
-fast-histogram==0.4
-fasteners==0.14.1
-Flask==0.12.2
-Flask-Cors==3.0.3
-formlayout==1.1.0
-fuzzywuzzy==0.16.0
-gast==0.2.0
-geopy==1.12.0
-greenlet==0.4.13
-grpcio==1.10.0
-guidata==1.7.6
-h5py==2.8.0rc1
-HeapDict==1.0.0
-holoviews==1.10.0a2
-html5lib==1.0.1
-husl==4.0.3
-idna==2.6
-imageio==2.3.0
-imagesize==1.0.0
-ipydatawidgets==3.0.0
-ipykernel==4.8.2
-ipyleaflet==0.7.3
-ipympl==0.1.0
-ipyparallel==6.1.1
-ipyscales==0.1.3
-ipython==6.2.1
-ipython-genutils==0.2.0
-ipython-sql==0.3.8
-ipywidgets==7.2.0
-isort==4.3.4
-itsdangerous==0.24
-Janome==0.4.1
-jedi==0.11.1
-Jinja2==2.10
-joblib==0.11
-jsonschema==2.6.0
-julia==0.1.5
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-jupyter-sphinx==0.1.2
-jupyterlab==0.31.12
-jupyterlab-launcher==0.10.5
-Keras==2.1.5
-keras-vis==0.4.1
-keyboard==0.13.5
-kiwisolver==1.0.1
-lazy-object-proxy==1.3.1
-lmfit==0.9.9
-locket==0.2.0
-lxml==4.2.1
-Markdown==2.6.11
-MarkupSafe==1.0
-matplotlib==2.2.2
-mccabe==0.6.1
-metakernel==0.20.14
-mistune==0.8.3
-mizani==0.4.6
-mkl-service==1.1.2
-monotonic==1.4
-more-itertools==4.1.0
-moviepy==0.2.3.2
-mpl-scatter-density==0.3
-mpld3==0.3
-mpldatacursor==0.6.2
-mpmath==1.0.0
-msgpack==0.5.6
-msgpack-python==0.5.4+dummy
-multidict==5.1.0
-multipledispatch==0.5.0
-mysql-connector-python==8.0.6
-nbconvert==5.3.1
-nbconvert_reportlab==0.2
-nbformat==4.4.0
-netCDF4==1.3.1
-networkx==2.1
-nltk==3.2.5
-notebook==5.4.1
-numcodecs==0.5.4
-numdifftools==0.9.20
-numexpr==2.6.4
-numpy==1.14.2+mkl
-numpydoc==0.7.0
-oct2py==4.0.6
-octave-kernel==0.28.3
-odo==0.5.0
-packaging==17.1
-palettable==3.1.0
-pandas==0.22.0
-pandas-datareader==0.6.0
-pandocfilters==1.4.2
-param==1.5.2
-paramnb==2.0.2
-parso==0.1.1
-partd==0.3.8
-patsy==0.5.0
-pdfrw==0.4
-pdvega==0.1
-pep8==1.7.1
-pexpect==4.4.0
-pg8000==1.11.0
-pickleshare==0.7.4
-Pillow==5.0.0
-pkginfo==1.4.2
-plotnine==0.3.0
-pluggy==0.6.0
-prettytable==0.7.2
-prompt-toolkit==1.0.15
-protobuf==3.5.1
-psutil==5.4.3
-ptpython==0.41
-ptyprocess==0.5.2
-PuLP==1.6.8
-py==1.5.3
-PyAudio==0.2.11
-pybars3==0.9.3
-pybind11==2.2.2
-pycodestyle==2.3.1
-pycparser==2.17
-pyflakes==1.6.0
-pyflux==0.4.17
-pygame==1.9.3
-Pygments==2.2.0
-pylint==1.8.3
-pymc==2.3.7
-pymc3==3.3
-PyMeta3==0.5.1
-pymongo==3.6.1
-pyodbc==4.0.23
-PyOpenGL==3.1.2
-pypandoc==1.3.2
-pyparsing==2.2.0
-PyQt5==5.9.2
-pyqtgraph==0.10.1.dev1
-pyserial==3.4
-pystache==0.5.4
-pytest==3.5.0
-python-dateutil==2.7.2
-python-hdf4==0.9.1
-python-Levenshtein==0.12.0
-python-snappy==0.5.2
-PythonQwt==0.5.5
-pythreejs==1.0.0
-pytz==2018.3
-PyWavelets==0.5.2
-pywin32==223
-pywinpty==0.5.1
-pywinusb==0.4.2
-PyYAML==3.12
-pyzmq==17.0.0
-QtAwesome==0.4.4
-qtconsole==4.3.1
-QtPy==1.4.0
-redis==2.10.6
-regex==2018.2.21
-reportlab==3.4.0
-requests==2.18.4
-requests-file==1.4.3
-requests-ftp==0.3.1
-requests-toolbelt==0.8.0
-rope==0.10.5
-rpy2==2.9.2
-Rx==1.6.1
-scikit-fuzzy==0.3.1
-scikit-image==0.13.1
-scikit-learn==0.19.1
-scikit-optimize==0.5.2
-scilab2py==0.6.1
-scipy==1.0.1
-seaborn==0.9.dev0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-simplejson==3.13.2
-sip==4.19.8
-six==1.11.0
-snakeviz==0.4.2
-snowballstemmer==1.2.1
-sortedcontainers==1.5.9
-sounddevice==0.3.10
-Sphinx==1.7.2
-sphinx-rtd-theme==0.2.4
-sphinxcontrib-websupport==1.0.1
-spyder==3.2.8
-SQLAlchemy==1.2.6
-sqlite-bro==0.8.11
-sqlparse==0.2.4
-statsmodels==0.8.0
-streamz==0.3.0
-supersmoother==0.4
-sympy==1.1.1
-tables==3.4.2
-tblib==1.3.2
-tensorboard==1.7.0
-tensorflow==1.7.0
-termcolor==1.1.0
-terminado==0.8.1
-testpath==0.3.1
-Theano==1.0.1
-toolz==0.9.0
-tornado==4.5.3
-tqdm==4.19.9
-traitlets==4.3.2
-traittypes==0.0.6
-twine==1.11.0
-twitter==1.17.1
-typing-extensions==3.10.0.2
-urllib3==1.21.1
-vega==0.5.0
-vega-datasets==0.4.1
-vega3==0.5.0
-ViTables==3.0.0
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.14.1
-widgetsnbextension==3.2.0
-winpython==1.10.20180404
-wordcloud==1.4.1
-wrapt==1.10.11
-xarray==0.10.2
-xlrd==1.1.0
-XlsxWriter==1.0.2
-xlwings==0.11.5
-yarl==1.6.3
-youtube-dl==2021.6.6
-zarr==2.2.0
-zict==0.1.3
+discord.py
+janome
+requests
+bs4
+urllib3
